<resources>
    <string name="app_name">NOW SOPT Android</string>

    <!-- main -->
    <string name="main_title">Welcome to SOPT</string>
    <string name="id">ID</string>
    <string name="id_hint">아이디를 입력해주세요</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">비밀번호를 입력해주세요</string>
    <string name="login">로그인 하기</string>
    <string name="sign_up">회원가입 하기</string>

    <!-- sign up -->
    <string name="sign_up_title">Sign Up</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">닉네임을 입력해주세요</string>
    <string name="phone_number">전화번호</string>
    <string name="phone_number_hint">전화번호를 입력해주세요</string>

    <string name="fail_sign_up_id">ID는 6글자 이상 10글자 이내로 작성해주세요</string>
    <string name="fail_sign_up_password">비밀번호는 8글자 이상 12글자 이내로 작성해주세요</string>
    <string name="fail_sign_up_nickname">닉네임은 한 글자 이상이어야 합니다</string>
    <string name="fail_sign_up_mbti">16가지 MBTI유형 중 해당되는 것을 작성해주세요</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="success_login">로그인 성공</string>
    <string name="fail_login">로그인 실패</string>

    <!-- Home -->
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="mypage">마이페이지</string>
</resources>