<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.login.LoginActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
        android:textSize="20sp"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:includeFontPadding="false"/>
    <EditText
        android:id="@+id/et_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_login_id"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/id_hint"
        android:includeFontPadding="false"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tv_login_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_login_id"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        android:includeFontPadding="false"/>
    <EditText
        android:id="@+id/et_login_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_login_pw"
        android:hint="@string/password_hint"
        android:includeFontPadding="false"
        android:autofillHints="no"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/btn_signup"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:includeFontPadding="false"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="60dp"
        android:includeFontPadding="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>