<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv_signup_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title"
        android:textSize="20sp"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:includeFontPadding="false"/>
    <EditText
        android:id="@+id/et_signup_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_id"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/id_hint"
        android:includeFontPadding="false"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tv_signup_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_signup_id"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        android:includeFontPadding="false"/>
    <EditText
        android:id="@+id/et_signup_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_pw"
        android:hint="@string/password_hint"
        android:includeFontPadding="false"
        android:autofillHints="no"
        android:inputType="numberPassword"/>

    <TextView
        android:id="@+id/tv_signup_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_signup_pw"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:includeFontPadding="false"/>
    <EditText
        android:id="@+id/et_signup_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/nickname_hint"
        android:includeFontPadding="false"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tv_signup_mbti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbti"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_signup_nickname"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:includeFontPadding="false"/>
    <EditText
        android:id="@+id/et_signup_mbti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_mbti"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/mbti_hint"
        android:includeFontPadding="false"
        android:autofillHints="no" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="60dp"
        android:includeFontPadding="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>